--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -11,12 +11,13 @@ body{
 }
 
 .title{
-    height:250px;
+    height:auto;
+    max-width: 30%;
     align-items: center;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    padding-top: 50px;
 }
 
 @font-face {
