--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -5,7 +5,10 @@ html{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  
+    /*END OF BACKGROUND IMAGE*/
+
+    color:white;
+    text-align: center;
 
 }
 
@@ -37,3 +40,15 @@ body {
   font-size: 48px;
 }*/
 
+.upload-btn{
+    border-radius: 12px;
+    background-color: #3c4ba5;
+    color: white;
+    padding: 20px 60px 20px 60px;
+    font-size: 20px;
+    border: none;
+
+     /* cloud 1 */
+
+    background: url(cloud.png);
+}
