--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -5,8 +5,6 @@ html{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  
-
 }
 
 .title{
@@ -17,6 +15,8 @@ html{
     margin-left: auto;
     margin-right: auto;
     padding-top: 50px;
+    filter: drop-shadow(0px 4px 25
+    px #000000);
 }
 
 @font-face {
