Button almost finished

--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -40,15 +40,25 @@ body {
   font-size: 48px;
 }*/
 
-.upload-btn{
-    border-radius: 12px;
-    background-color: #3c4ba5;
-    color: white;
-    padding: 20px 60px 20px 60px;
-    font-size: 20px;
+.button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
     border: none;
-
-     /* cloud 1 */
-
-    background: url(cloud.png);
-}
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  
+  .button:hover {background-color: #3e8e41}
+  
+  .button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
