Button still in progress Changed colors and now expands

--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -7,9 +7,10 @@ html{
     background-size: cover;
     /*END OF BACKGROUND IMAGE*/
 
+    /* FOR THE TEXT*/
     color:white;
     text-align: center;
-
+    
 }
 
 .title{
@@ -49,16 +50,40 @@ body {
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: #002145;
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
   }
   
-  .button:hover {background-color: #3e8e41}
+  .button:hover {
+    background-color: #002145;
+    transform: scale(1.1);
+    
+}
   
-  .button:active {
-    background-color: #3e8e41;
+  /* .button:active {
+    background-color: #002145;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
-  }
+  } */
+
+  /* .joke-text{
+    color:black;
+    padding-bottom: 20px;
+
+}
+
+.joke-btn{
+    border-radius: 12px;
+    background-color: #3c4ba5;
+    color: white;
+    padding: 20px 60px 20px 60px;
+    font-size: 20px;
+    border: none;
+    font-family: "Coming Soon";
+}
+
+.joke-btn:hover{
+    transform: scale(1.1);
+} */
