--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -42,7 +42,7 @@ body {
   font-size: 48px;
 }*/
 
-.button {
+/* .button {
     display: inline-block;
     padding: 15px 25px;
     font-size: 24px;
