--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -1,101 +1,106 @@
 body{
-    /*BACKGROUND IMAGE SETTINGS*/
-    background: url("images/ubc\ colored\ map.jpg");
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    /*END OF BACKGROUND IMAGE*/
+  /*BACKGROUND IMAGE SETTINGS*/
+  background: url("images/ubc\ colored\ map.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  /*END OF BACKGROUND IMAGE*/
 
-    /*FOR THE TEXT*/
-    color:white;
-    text-align: center;
-    
+  /*FOR THE TEXT*/
+  color:white;
+  text-align: center;
+  
 }
 
 .title{
-    height:auto;
-    max-width: 30%;
-    align-items: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 50px;
-    filter: drop-shadow(0px 4px 25px #000000);
+  height:auto;
+  max-width: 30%;
+  align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 50px;
+  filter: drop-shadow(0px 4px 25px #000000);
 }
 
 @font-face {
-    font-family: GraublauWeb;
-    src: url("Fonts/whitneymedium.otf") format("opentype");
+  font-family: GraublauWeb;
+  src: url("Fonts/whitneymedium.otf") format("opentype");
 }
 
 .btn{
-    background-color: #002145;
-    padding: 36px 90px;
-    border-radius: 60px;
-    font-size: 30px;
+  background-color: #002145;
+  padding: 12px 100px;
+  border-radius: 60px;
+  font-size: 30px;
 }
 
 .btn:hover {
-    transform: scale(1.1);
-    background-color: #002145;
+  transform: scale(1.1);
+  background-color: #002145;
 
+}
+
+.cloud-icon {
+  width: 40%;
+  height: auto;
 }
 
 /*@font-face {
-  font-family: 'Tangerine';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Tangerine'), url('http://example.com/tangerine.ttf') format('truetype');
+font-family: 'Tangerine';
+font-style: normal;
+font-weight: normal;
+src: local('Tangerine'), url('http://example.com/tangerine.ttf') format('truetype');
 }
 body {
-  font-family: 'Tangerine', serif;
-  font-size: 48px;
+font-family: 'Tangerine', serif;
+font-size: 48px;
 }*/
 
 /* .button {
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #002145;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
-  }
-  
-  .button:hover {
-    background-color: #002145;
-    transform: scale(1.1);
-    
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #002145;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
 }
-  
-  /* .button:active {
-    background-color: #002145;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  } */
 
-  /* .joke-text{
-    color:black;
-    padding-bottom: 20px;
+.button:hover {
+  background-color: #002145;
+  transform: scale(1.1);
+  
+}
+
+/* .button:active {
+  background-color: #002145;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+} */
+
+/* .joke-text{
+  color:black;
+  padding-bottom: 20px;
 
 }
 
 .joke-btn{
-    border-radius: 12px;
-    background-color: #3c4ba5;
-    color: white;
-    padding: 20px 60px 20px 60px;
-    font-size: 20px;
-    border: none;
-    font-family: "Coming Soon";
+  border-radius: 12px;
+  background-color: #3c4ba5;
+  color: white;
+  padding: 20px 60px 20px 60px;
+  font-size: 20px;
+  border: none;
+  font-family: "Coming Soon";
 }
 
 .joke-btn:hover{
-    transform: scale(1.1);
+  transform: scale(1.1);
 } */
