--- a/Website/Styles.css
+++ b/Website/Styles.css
@@ -21,7 +21,7 @@ body{
   margin-left: auto;
   margin-right: auto;
   padding-top: 50px;
-  filter: drop-shadow(0px 4px 25px #000000);
+  filter: drop-shadow(0px 0px 25px #000000);
 }
 
 @font-face {
@@ -31,14 +31,15 @@ body{
 
 .btn{
   background-color: #002145;
-  padding: 12px 100px;
-  border-radius: 60px;
-  font-size: 30px;
+  padding: 24px 100px;
+  border-radius: 360px;
+  border: none;
+  filter: drop-shadow(0px 0px 25px #000000);
 }
 
 .btn:hover {
   transform: scale(1.1);
-  background-color: #002145;
+  background-color: #156c91;
 
 }
 
