--- a/src/App.scss
+++ b/src/App.scss
@@ -28,12 +28,13 @@
 
 .information {
   color: whitesmoke;
-
+  text-shadow: 2px 2px 10px #000000;
+  
   h2 {
     font-family: WhitneyMedium;
   }
 
   p {
-    font-family: WhitneyMedium;
+    font-family: WhitneyLight;
   }
 }
