--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import '~bootstrap/scss/bootstrap';
+
 @font-face {
   font-family: WhitneyMedium;
   src: url("assets/fonts/whitneymedium.otf") format("opentype");
@@ -26,10 +28,24 @@
   filter: drop-shadow(0px 4px 25px #000000);
 }
 
+.uploadButton {
+  background-color: #002145;
+  border-radius: 360px;
+  padding: 15px 120px;
+  border: none;
+  filter: drop-shadow(0px 0px 25px #000000);
+}
+
+.uploadButton:hover {
+  transform: scale(1.03);
+  background-color: #003064;
+  filter: drop-shadow(0px 0px 25px #303030);
+}
+
 .information {
   color: whitesmoke;
   text-shadow: 2px 2px 10px #000000;
-  
+
   h2 {
     font-family: WhitneyMedium;
   }
