--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  outline: 5px dotted green;
+  outline: 2px solid green;
   .Sun {
     outline: 5px dotted purple;
   }
