--- a/src/App.scss
+++ b/src/App.scss
@@ -42,11 +42,12 @@
   filter: drop-shadow(0px 0px 25px #303030);
 }
 
-.journeys {
+.timeTable {
   color: red;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  flex: 1 1 0;
   outline: 2px solid green;
   .Sun {
     outline: 5px dotted purple;
