--- a/src/App.scss
+++ b/src/App.scss
@@ -47,8 +47,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  flex: 1 1 0;
   outline: 2px solid green;
+  .day {
+    flex: 1;
+  }
   .Sun {
     outline: 5px dotted purple;
   }
